# cross-covariance

./: CMakeLists.txt  README.md  package.xml
include/cross_covariance/: cross_covariance.h
launch/: cross_covariance.launch
src/: cross_covariance.cpp  main.cpp
