<?xml version="1.0"?>
<package format="2">
  <name>cross_covariance</name>
  <version>0.0.0</version>
  <description>The cross_covariance package</description>
  <maintainer email="chao.shun.cheng.tw@gmail.com">Chao Shun Cheng</maintainer>
  <author email="chao.shun.cheng.tw@gmail.com">Chao Shun Cheng</author>
  <license>Apache-2.0</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>amathutils_lib</build_depend>
  <build_depend>autoware_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>vector_map</build_depend>
  <build_export_depend>amathutils_lib</build_export_depend>
  <build_export_depend>autoware_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslint</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>vector_map</build_export_depend>
  <exec_depend>amathutils_lib</exec_depend>
  <exec_depend>autoware_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslint</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>vector_map</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
